// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValueDynamicsBar > should render ValueDynamicsBar default title 1`] = `
<DocumentFragment>
  <div
    class="_root_951cff"
  >
    <span
      class="_title_951cff"
    >
      Title
    </span>
    <div
      class="_wrapper_951cff  _green_951cff"
    >
      <svg
        fill="#14C785"
        height="15px"
        viewBox="0 0 24 24"
        width="15px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.0566 16H5.94336C5.10459 16 4.68455 14.9782 5.27763 14.3806L11.3343 8.27783C11.7019 7.90739 12.2981 7.90739 12.6657 8.27783L18.7223 14.3806C19.3155 14.9782 18.8954 16 18.0566 16Z"
        />
      </svg>
      10.13 %
    </div>
  </div>
</DocumentFragment>
`;

exports[`ValueDynamicsBar > should render ValueDynamicsBar default with negative value 1`] = `
<DocumentFragment>
  <div
    class="_root_951cff"
  >
    <div
      class="_wrapper_951cff  _red_951cff"
    >
      <svg
        class="sc-aef7b723-0 eummbo"
        fill="#c50140"
        height="15px"
        viewBox="0 0 24 24"
        width="15px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.0566 8H5.94336C5.10459 8 4.68455 9.02183 5.27763 9.61943L11.3343 15.7222C11.7019 16.0926 12.2981 16.0926 12.6657 15.7222L18.7223 9.61943C19.3155 9.02183 18.8954 8 18.0566 8Z"
        />
      </svg>
      -100 %
    </div>
  </div>
</DocumentFragment>
`;

exports[`ValueDynamicsBar > should render ValueDynamicsBar default with positive value 1`] = `
<DocumentFragment>
  <div
    class="_root_951cff"
  >
    <div
      class="_wrapper_951cff  _green_951cff"
    >
      <svg
        fill="#14C785"
        height="15px"
        viewBox="0 0 24 24"
        width="15px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.0566 16H5.94336C5.10459 16 4.68455 14.9782 5.27763 14.3806L11.3343 8.27783C11.7019 7.90739 12.2981 7.90739 12.6657 8.27783L18.7223 14.3806C19.3155 14.9782 18.8954 16 18.0566 16Z"
        />
      </svg>
      100 %
    </div>
  </div>
</DocumentFragment>
`;
